--- a/MobileClient/LocalFiles/Assets/Main.css
+++ b/MobileClient/LocalFiles/Assets/Main.css
@@ -38,7 +38,15 @@ html, body
 {
 	position: absolute;
 	top: 0px;
-	bottom: 0px;
+	bottom: 25px;
 	left: 0px;
 	right: 0px;
+	
+	border: solid 1px green;
+}
+
+#Toolbar
+{
+	position: absolute;
+	bottom: 0px;
 }
