--- a/trunk/MobileClient/LocalFiles/Assets/Main.css
+++ b/trunk/MobileClient/LocalFiles/Assets/Main.css
@@ -26,19 +26,27 @@ html, body
 	overflow: hidden;
 	position: relative;
 	
-	/* Debug size */
-	width: 620px;
-	height: 420px;
 	
+	width: 100%;
+	height: 100%;
 	
 	margin: auto;
+}
+
+/* Development desktop size */
+@media only screen and (min-width : 1224px) {
+	#Screen
+	{
+		width: 620px;
+		height: 420px;
+	}
 }
 
 #GameWorldMap
 {
 	position: absolute;
 	top: 0px;
-	bottom: 25px;
+	bottom: 35px;
 	left: 0px;
 	right: 0px;
 	
@@ -50,3 +58,58 @@ html, body
 	position: absolute;
 	bottom: 0px;
 }
+
+/* Controls */
+button {
+	
+	-moz-box-shadow:inset 0px 1px 3px 0px #91b8b3;
+	-webkit-box-shadow:inset 0px 1px 3px 0px #91b8b3;
+	box-shadow:inset 0px 1px 3px 0px #91b8b3;
+	
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #768d87), color-stop(1, #6c7c7c));
+	background:-moz-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
+	background:-webkit-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
+	background:-o-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
+	background:-ms-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
+	background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#768d87', endColorstr='#6c7c7c',GradientType=0);
+	
+	background-color:#768d87;
+	
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
+	
+	border:1px solid #566963;
+	
+	display:inline-block;
+	color:#ffffff;
+	font-family:arial;
+	font-size:15px;
+	font-weight:bold;
+	padding: 4px 12px;
+	text-decoration:none;
+	
+	text-shadow:0px -1px 0px #2b665e;
+	
+}
+
+button:hover {
+	
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6c7c7c), color-stop(1, #768d87));
+	background:-moz-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
+	background:-webkit-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
+	background:-o-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
+	background:-ms-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
+	background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#6c7c7c', endColorstr='#768d87',GradientType=0);
+	
+	background-color:#6c7c7c;
+}
+
+button:active {
+	position:relative;
+	top:1px;
+}
+
+
