--- a/trunk/MobileClient/LocalFiles/Assets/Main.css
+++ b/trunk/MobileClient/LocalFiles/Assets/Main.css
@@ -53,10 +53,21 @@ html, body
 	border: solid 1px green;
 }
 
-#Toolbar
+#ToolbarContainer
 {
 	position: absolute;
+	left: 0px;
+	right: 0px;
 	bottom: 0px;
+}
+
+#Toolbar
+{
+	/* DEBUG: width is set in order for iScroll to work. 
+	 *		  Else width of the parent is used. 
+	 */
+	width: 750px;
+	white-space: nowrap;
 }
 
 /* Controls */
