--- a/trunk/MobileClient/LocalFiles/Assets/Render/TileRenderingSystem.css
+++ b/trunk/MobileClient/LocalFiles/Assets/Render/TileRenderingSystem.css
@@ -7,6 +7,11 @@
 	color: rgb(30, 39, 38);	
 }
 
+.tile_fog
+{
+	opacity: 0.6;
+}
+
 .tile_selected
 {
 	background: url("Images/hex_selected.png") no-repeat !important;
