* Added DevConsole shows error/warning/trace logging on screen and pops on any exceptions/errors/warnings. Works on Android as well.

--- a/MobileClient/LocalFiles/Assets/Main.css
+++ b/MobileClient/LocalFiles/Assets/Main.css
@@ -46,7 +46,7 @@ html, body
 {
 	position: absolute;
 	top: 0px;
-	bottom: 35px;
+	bottom: 45px;
 	left: 0px;
 	right: 0px;
 	
@@ -59,6 +59,8 @@ html, body
 	left: 0px;
 	right: 0px;
 	bottom: 0px;
+	
+	height: 40px;
 }
 
 #Toolbar
