--- a/MobileClient/LocalFiles/Assets/Main.css
+++ b/MobileClient/LocalFiles/Assets/Main.css
@@ -53,7 +53,7 @@ html, body
 	border: solid 1px green;
 }
 
-#ToolbarContainer
+#ToolbarContainer, #ToolbarContainerEditor
 {
 	position: absolute;
 	left: 0px;
@@ -63,7 +63,7 @@ html, body
 	height: 40px;
 }
 
-#Toolbar
+#Toolbar, #ToolbarEditor
 {
 	/* DEBUG: width is set in order for iScroll to work. 
 	 *		  Else width of the parent is used. 
