--- a/MobileClient/LocalFiles/Assets/Editor.css
+++ b/MobileClient/LocalFiles/Assets/Editor.css
@@ -1,14 +1,14 @@
-#UnitPropsEditorContainer
+#UnitPropsEditorContainer, #GamePropsEditorContainer
 {
 	width: 320px;
 	height: 200px;
 }
 
-#UnitPropsEditorContainer > table td:nth-child(1)
+#UnitPropsEditorContainer > table td:nth-child(1), #GamePropsEditorContainer > table td:nth-child(1)
 {
 	width: 100px;
 }
-#UnitPropsEditorContainer > table td:nth-child(2)
+#UnitPropsEditorContainer > table td:nth-child(2), #GamePropsEditorContainer > table td:nth-child(2)
 {
 	width: 150px;
 }
