--- a/trunk/MobileClient/LocalFiles/Assets/Main.css
+++ b/trunk/MobileClient/LocalFiles/Assets/Main.css
@@ -88,7 +88,7 @@ html, body
 	border-radius: 6px;
 }
 
-.toolbar_more button, .toolbar_more input
+.toolbar_more button, .toolbar_more input, .toolbar_more .input_file_wrapper 
 {
 	display: block;
 	margin: 6px auto;
@@ -111,7 +111,7 @@ html, body
 }
 
 /* Controls */
-button {
+button, .input_file_wrapper {
 	
 	-moz-box-shadow:inset 0px 1px 3px 0px #91b8b3;
 	-webkit-box-shadow:inset 0px 1px 3px 0px #91b8b3;
@@ -140,12 +140,16 @@ button {
 	font-weight:bold;
 	padding: 4px 12px;
 	text-decoration:none;
+	text-align: center;
+	
+	overflow: hidden;
+	position: relative;
 	
 	text-shadow:0px -1px 0px #2b665e;
 	
 }
 
-button:hover {
+button:hover, .input_file_wrapper:hover {
 	
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6c7c7c), color-stop(1, #768d87));
 	background:-moz-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
@@ -158,11 +162,27 @@ button:hover {
 	background-color:#6c7c7c;
 }
 
-button:active {
+button:active, .input_file_wrapper:active {
 	position:relative;
 	top:1px;
 }
 
+.input_file_wrapper {
+	padding-left: 0px;
+	padding-right: 0px;
+	width: 0px;	/* HACK: sizing doesn't seem to work correctly */
+}
+
+.input_file_wrapper input[type="file"] {
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	margin: 0px;
+	opacity: 0;
+	-ms-filter: 'alpha(opacity=0)';
+	font-size: 200px;
+	direction: ltr;
+}
 
 .range_value
 {
