* Re-implemented undo feature. Undo is now supported for all unit actions. Supporting multiple turnPoints. Works on magic. * GameExecutor now stores a stack of actions for the current turn. Once turn is changed, actions are discarded. * Placeables are no more destroyed on dying. They are now just detached from world. If undo, they are attached back on. * Debug button "Undo" for testing.

--- a/MobileClient/LocalFiles/Assets/Main.css
+++ b/MobileClient/LocalFiles/Assets/Main.css
@@ -83,6 +83,7 @@ html, body
 	
 	height: 200px;
 	width: 200px;
+	overflow: hidden;
 	
 	background-color: rgba(53, 62, 83, 0.8);
 	border: 2px rgba(104, 113, 148, 0.82) solid;
