* Optimized: pause animations (ticker!) while panning and not showing battle screen. Panning is now way smoother, since ticker doesn't race with touchmove events. * Additional optimizations on tapping tile, trying to make taps more responsive.

--- a/MobileClient/LocalFiles/Assets/Main.css
+++ b/MobileClient/LocalFiles/Assets/Main.css
@@ -1,3 +1,9 @@
+html {
+	/* Disables touch delays on some browsers */
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
+}
+
 html, body
 {
 	margin: 0;
