--- a/trunk/MobileClient/LocalFiles/Assets/Main.css
+++ b/trunk/MobileClient/LocalFiles/Assets/Main.css
@@ -118,6 +118,20 @@ html, body
 	font-weight: bold;
 }
 
+#FrameStats
+{
+	color: white;
+	position: absolute;
+	top: 2px;
+	left: 8px;
+	text-align: left;
+	z-index: 999;
+	
+	background: rgba(22, 26, 26, 0.88);
+	border-radius: 8px;
+	padding: 8px;
+}
+
 /* Controls */
 button, .input_file_wrapper {
 	
