* Zoom level is now compensating for asset scale as well (e.g. DPR 1.5 but Asset scale is 2). * Fixed CSS for texts, buttons, divs to look good on higher asset scales. Using .asset-scale-2 and .asset-scale-3 classes. * Fixed DevConsole buttons to be less buggy and easier to press.

--- a/MobileClient/www/Assets/DevConsole.css
+++ b/MobileClient/www/Assets/DevConsole.css
@@ -20,18 +20,22 @@
 	font-size: 12px;
 }
 
-#BtnConsoleClose
+.asset-scale-2 #Console
+{
+	font-size: 30px;
+}
+
+.asset-scale-3 #Console
+{
+	font-size: 46px;
+}
+
+
+#ConsoleButtons
 {
 	position: absolute;
 	bottom: 4px;
 	right: 4px;
-}
-
-#BtnConsoleClear
-{
-	position: absolute;
-	bottom: 4px;
-	right: 46px;
 }
 
 #Console p
