--- a/MobileClient/www/Assets/Main.css
+++ b/MobileClient/www/Assets/Main.css
@@ -12,6 +12,7 @@ html, body
 	height: 100%;
 	background-color: #FFFFFF;
 	font-family: sans-serif;
+	font-size: 16px;
 	text-decoration: none;
 	overflow: hidden;
 
@@ -25,6 +26,16 @@ html, body
 	user-select: none;
 	
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+body.asset-scale-2
+{
+	font-size: 32px;
+}
+
+body.asset-scale-3
+{
+	font-size: 48px;
 }
 
 #Screen
@@ -60,6 +71,17 @@ html, body
 	border: solid 1px green;
 }
 
+.asset-scale-2 #GameWorldMap, .asset-scale-2 #GameWorldMapEditor
+{
+	bottom: 65px;
+}
+
+.asset-scale-3 #GameWorldMap, .asset-scale-3 #GameWorldMapEditor
+{
+	bottom: 75px;
+}
+
+
 .toolbar_bottom_container
 {
 	position: absolute;
@@ -69,6 +91,17 @@ html, body
 	
 	height: 40px;
 }
+
+.asset-scale-2 .toolbar_bottom_container
+{
+	height: 65px;
+}
+
+.asset-scale-3 .toolbar_bottom_container
+{
+	height: 75px;
+}
+
 
 .toolbar_bottom
 {
@@ -87,7 +120,7 @@ html, body
 	left: 0px;
 	bottom: 45px;
 	
-	height: 200px;
+	height: 250px;
 	width: 200px;
 	overflow: hidden;
 	
@@ -96,11 +129,26 @@ html, body
 	border-radius: 6px;
 }
 
+.asset-scale-2 .toolbar_more
+{
+	bottom: 65px;
+	width: 300px;
+	height: 400px;
+}
+
+.asset-scale-3 .toolbar_more
+{
+	bottom: 75px;
+	
+	width: 400px;
+	height: 600px;
+}
+
 .toolbar_more button, .toolbar_more input, .toolbar_more .input_file_wrapper 
 {
 	display: block;
 	margin: 6px auto;
-	min-width: 150px;
+	width: 90%;
 }
 
 
@@ -116,6 +164,16 @@ html, body
 	
 	font-size: 26px;
 	font-weight: bold;
+}
+
+.asset-scale-2 #LoadingScreenContent
+{
+	font-size: 52px;
+}
+
+.asset-scale-3 #LoadingScreenContent
+{
+	font-size: 78px;
 }
 
 #RuntimeStats
@@ -169,6 +227,16 @@ button, .input_file_wrapper {
 	
 	text-shadow:0px -1px 0px #2b665e;
 	
+}
+
+.asset-scale-2 button, .asset-scale-2 .input_file_wrapper
+{
+	font-size: 36px;
+}
+
+.asset-scale-3 button, .asset-scale-3 .input_file_wrapper
+{
+	font-size: 52px;
 }
 
 button:hover, .input_file_wrapper:hover {
