--- a/MobileClient/www/Assets/Render/TileRenderingSystem.css
+++ b/MobileClient/www/Assets/Render/TileRenderingSystem.css
@@ -11,15 +11,23 @@
 {
 	text-align: center;
 	padding-top: 8px;
+	
+	background-repeat: no-repeat;
 }
-
 .debug_tile
 {
 	font-size: 12px;
 	
 	padding: 2px;
 	
-	background: rgba(143, 166, 166, 0.7);
-	color: rgba(0, 0, 0, 0.7);
+	background: rgba(78, 92, 92, 0.7);
+	color: rgba(255, 255, 255, 1);
 	border-radius: 8px;
+	
+	opacity: 0.6;
+}
+
+.debug_tile:hover
+{
+	opacity: 0.95;
 }
