--- a/MobileClient/www/Assets/Render/Placeables.css
+++ b/MobileClient/www/Assets/Render/Placeables.css
@@ -33,9 +33,46 @@
 	/* -webkit-text-stroke: 0.6px black; */
 	
 	/* Source: https://css-tricks.com/adding-stroke-to-web-text/ */
-	text-shadow:
+	/* text-shadow:
    -1px -1px 0 #000,
 	1px -1px 0 #000,
 	-1px 1px 0 #000,
 	 1px 1px 0 #000;
+
+	Using real text spans to fake the shadow, for backward compatibility (old androids).
+	*/
+	z-index: 100;
+}
+
+.text_outline
+{
+	color: black;
+	position: absolute;
+	z-index: -100;
+	text-align: left;
+	white-space: nowrap;
+}
+
+.text_outline.left_top
+{
+	top:  -1px;
+	left: -1px;
+}
+
+.text_outline.right_top
+{
+	top: -1px;
+	left: 1px;
+}
+
+.text_outline.right_bottom
+{
+	top:  1px;
+	left: 1px;
+}
+
+.text_outline.left_bottom
+{
+	top:   1px;
+	left: -1px;
 }
