* Changed the Fight screen rendering flow. Now it takes up the whole screen and scales the same way as the world. * Added FightFrame in red, to show where the active fight zone is. * Fixed: Static asset scaler to work with sequences as well. * Render statistics are now hidden and are shown via button.

--- a/MobileClient/www/Assets/FightScreen.css
+++ b/MobileClient/www/Assets/FightScreen.css
@@ -22,17 +22,8 @@
 	overflow: visible;
 }
 
-.fight_scene_plot
+#FightFrame
 {
-	overflow: visible;
-	/*transform-origin: top left; - doesn't work on android */
 	position: absolute;
-	top: 0px;
-	left: 0px;
-}
-
-.fight_scene_plot .sjs
-{
-	border: 1px solid red;
-	background-color: cadetblue;
+	border: 2px solid red;
 }
