* Added resources (credits), earned by owning cities (bases for now).

--- a/MobileClient/www/Assets/DevTools.css
+++ b/MobileClient/www/Assets/DevTools.css
@@ -12,6 +12,19 @@
 	padding: 8px;
 }
 
+#LbCredits
+{
+	border: 4px ridge #FFDB1A;
+	border-radius: 6px;
+	background-color: #083B40;
+	color: #E2D747;
+	padding: 4px;
+	
+	display: inline-block;
+	min-width: 40px;
+	text-align: right;
+}
+
 #AnimationInfoTool
 {
 	color: white;
