--- a/MobileClient/www/Assets/Render/TileRenderingSystem.css
+++ b/MobileClient/www/Assets/Render/TileRenderingSystem.css
@@ -22,3 +22,12 @@
 {
 	opacity: 0.95;
 }
+
+.visibility_fog_filter
+{
+	-webkit-filter: brightness(0.4) contrast(0.8);
+	-moz-filter: brightness(0.4) contrast(0.8);
+	-ms-filter: brightness(0.4) contrast(0.8);
+	-o-filter: brightness(0.4) contrast(0.8);
+	filter: brightness(0.4) contrast(0.8);
+}
