--- a/MobileClient/www/Assets/Editor.css
+++ b/MobileClient/www/Assets/Editor.css
@@ -1,15 +1,34 @@
 #UnitPropsEditorContainer, #GamePropsEditorContainer
 {
 	width: 320px;
-	height: 200px;
+	height: 400px;
 }
 
 #UnitPropsEditorContainer > table td:nth-child(1), #GamePropsEditorContainer > table td:nth-child(1)
 {
-	width: 100px;
+	text-align: right;
+	width: 150px;
 }
 #UnitPropsEditorContainer > table td:nth-child(2), #GamePropsEditorContainer > table td:nth-child(2)
 {
 	text-align: left;
 	width: 150px;
+}
+
+#UnitPropsEditorContainer input[type="text"], 
+#GamePropsEditorContainer input[type="text"]
+{
+	width: 120px;
+}
+
+#UnitPropsEditorContainer input[type="number"], 
+#GamePropsEditorContainer input[type="number"]
+{
+	width: 30px;
+}
+
+#UnitPropsEditorContainer select, 
+#GamePropsEditorContainer select
+{
+	width: 75px;
 }
