* Implemented simple MainMenu state. Changed it to be the starting state. Can navigate to TestGame and WorldEditor state. * Refactored back-button input to go back to MainMenu state, if no dialogs are shown. Fixed some dialog buttons. * Moved FrameStats to main.

--- a/MobileClient/www/Assets/Main.css
+++ b/MobileClient/www/Assets/Main.css
@@ -55,6 +55,15 @@ html, body
 	}
 }
 
+#MainMenu
+{
+	position: absolute;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+}
+
 #GameWorldMap, #GameWorldMapEditor
 {
 	position: absolute;
