* Added Map Selector actual preview using optimized lightweight world. Can pan/zoom. * Optimized: world destroying performance. Some mock up checks as well. * Fixed: invalidation happening too early on destroying entities, causing component destructors not get called. * Fixed: errors when destroying world and no players are playing.

--- a/MobileClient/www/Assets/MenuScreen.css
+++ b/MobileClient/www/Assets/MenuScreen.css
@@ -68,13 +68,16 @@
 
 #SkirmishMapSelectName
 {
-	margin-top: 0px;
+	margin-top: 0px !important;
+	position: relative;
 }
 
 #SkirmishMapSelectCustomMap
 {
+	position: relative;
 	font-size: 0.7em;
 	font-weight: bold;
+	display: none;
 }
 
 #SkirmishMapSelectPreview
@@ -111,5 +114,14 @@
 {
 	position: absolute;
 	bottom: 0px;
+	right: 0px;
+}
+
+#GameWorldMapPreview
+{
+	position: absolute;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
 	right: 0px;
 }
