--- a/MobileClient/www/Assets/Dialogs.css
+++ b/MobileClient/www/Assets/Dialogs.css
@@ -11,6 +11,18 @@
 	display: none;
 }
 
+.dialog_blocker_clear
+{
+	position: absolute;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	z-index: 100;
+	
+	display: none;
+}
+
 .dialog
 {
 	color: white;
