* UI Fixed: Game Menu - Menu button to close the menu. Added pressed state to menu buttons.

--- a/MobileClient/www/Assets/Main.css
+++ b/MobileClient/www/Assets/Main.css
@@ -358,3 +358,8 @@ button[disabled], .input_file_wrapper[disabled]
 	
 	text-transform: uppercase;
 }
+
+.btn_docked_top_small:active
+{
+	background-image: url('UI/Elements/Button-docked-top-small-pressed.png');
+}
